# raylib_video_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.c
